Common components added

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -37,7 +37,9 @@
     ],
     "react/jsx-uses-vars": "error",
     "react/jsx-uses-react": "error",
-    "@typescript-eslint/explicit-function-return-type": "off"
+    "@typescript-eslint/explicit-function-return-type": "off",
+    "@typescript-eslint/no-explicit-any": "off",
+    "@typescript-eslint/ban-types": "off"
   },
   "settings": {
     "import/resolver": {
