--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "axios": "^0.21.0",
     "husky": "^4.3.6",
     "lint-staged": "^10.5.3",
+    "notistack": "^1.0.2",
     "prettier": "^2.2.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
