--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "@types/react-router-dom": "^5.1.6",
     "@typescript-eslint/eslint-plugin": "^4.10.0",
     "@typescript-eslint/parser": "^4.10.0",
-    "eslint": "^7.15.0"
+    "eslint": "^7.15.0",
+    "sass": "^1.32.2"
   }
 }
