--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/react-dom": "^16.9.8",
     "axios": "^0.21.0",
     "husky": "^4.3.6",
+    "jss-rtl": "^0.3.0",
     "lint-staged": "^10.5.3",
     "notistack": "^1.0.2",
     "prettier": "^2.2.1",
